Update users
Se actualiza la configuración para actualizar usuarios